--- a/src/components/cv/skills/Skills.scss
+++ b/src/components/cv/skills/Skills.scss
@@ -1,3 +1,9 @@
-.skill-category-title {
-  margin: auto;
+#skills-list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+
+  .skill-category-title {
+    margin: auto;
+  }
 }
