--- a/src/components/profile/Profile.scss
+++ b/src/components/profile/Profile.scss
@@ -36,7 +36,6 @@
 
     @media (width <= 700px) {
       flex-direction: row;
-      margin-left: 1rem;
       justify-content: center;
       gap: 1em;
 
@@ -50,7 +49,7 @@
       flex-direction: row;
 
       div {
-        height: 35;
+        height: 35px;
         width: 35px;
       }
 
