--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,3 +1,3 @@
 $header-background-color: #2c77a8;
 $header-text-color: black;
-$body-background-color: rgb(223, 221, 221);
+$body-background-color: #dfdddd;
