--- a/src/layout/Layout.scss
+++ b/src/layout/Layout.scss
@@ -808,7 +808,7 @@ pre tt::after {
 
     #portfolio-content {
       flex-grow: 1;
-      margin: 1em 12% 0;
+      margin: 1em 6%;
     }
 
     @media (width <= 700px) {
