--- a/src/pages/page-styles/index.scss
+++ b/src/pages/page-styles/index.scss
@@ -1,7 +1,11 @@
 @import '../../styles/colors';
 
+#presentation {
+  margin-top: 0.5em;
+}
+
 #blog-title {
-  margin-top: 1em;
+  margin-top: 2em;
 }
 
 ol {
