--- a/src/pages/page-styles/projets.scss
+++ b/src/pages/page-styles/projets.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-flow: row wrap;
   width: 100%;
-  gap: 2em;
+  gap: 3em;
+  margin-top: 2em;
 
   > * {
     flex-basis: calc(50% - 1.5em);
