--- a/src/pages/page-styles/contact.scss
+++ b/src/pages/page-styles/contact.scss
@@ -6,6 +6,10 @@
   display: flex;
   flex-direction: column;
 
+  .contact-field {
+    background-color: white;
+  }
+
   #contact-informations {
     display: flex;
     flex-direction: row;
