--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -26,7 +26,7 @@
     display: flex;
     flex-flow: row wrap;
     margin: auto 2em auto 0;
-    gap: 0.5em;
+    gap: 0.5em 2em;
 
     @media (width <=500px) {
       display: grid;
