--- a/src/components/profile/Profile.scss
+++ b/src/components/profile/Profile.scss
@@ -1,11 +1,12 @@
 #profile {
   display: flex;
   flex-direction: column;
-  gap: 1em;
+  margin-top: 2em;
+  gap: 1.5em;
 
   @media (width <= 700px) {
+    margin-top: 1em;
     display: grid;
-    gap: 0.5em;
     justify-items: center;
   }
 
@@ -32,7 +33,7 @@
   #social-links {
     display: flex;
     flex-direction: column;
-    gap: 0.5em;
+    gap: 1em 0.5em;
 
     @media (width <= 700px) {
       flex-direction: row;
