--- a/src/layout/Layout.scss
+++ b/src/layout/Layout.scss
@@ -804,6 +804,10 @@ pre tt::after {
 
     #profile-content {
       margin: 1em 0 0 2em;
+
+      @media (width <= 700px) {
+        margin-left: 0;
+      }
     }
 
     #portfolio-content {
