--- a/src/components/profile/Profile.scss
+++ b/src/components/profile/Profile.scss
@@ -19,6 +19,10 @@
     flex-direction: column;
     row-gap: 0.5em;
 
+    @media (width > 700px) {
+      margin-left: 0.3em;
+    }
+
     svg {
       margin-right: 1rem;
       width: 25px;
