--- a/src/layout/Layout.scss
+++ b/src/layout/Layout.scss
@@ -785,9 +785,8 @@ pre tt::after {
     flex-grow: 1;
 
     #profile-container {
-      flex: 0 1 15%;
-      border-right: 1px solid black;
-      background-color: $profile-background-color;
+      flex: 1 0 20%;
+      background-color: $body-background-color;
 
       &.blog-view {
         @media (width <= 700px) {
@@ -799,17 +798,21 @@ pre tt::after {
     #portfolio-body {
       display: flex;
       flex-direction: column;
-      flex: 0 1 85%;
+      flex: 1 0 80%;
       background-color: $body-background-color;
     }
 
     #profile-content {
-      margin: 1em 0.5em;
+      margin: 1em 0 0 2em;
+
+      @media (width <= 700px) {
+        margin-left: 0;
+      }
     }
 
     #portfolio-content {
       flex-grow: 1;
-      margin: 1em 12% 0;
+      margin: 1em 7%;
     }
 
     @media (width <= 700px) {
