--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,4 +1,3 @@
 $header-background-color: #2c77a8;
 $header-text-color: black;
-$profile-background-color: #828486;
-$body-background-color: white;
+$body-background-color: #dfdddd;
