--- a/src/pages/page-styles/index.scss
+++ b/src/pages/page-styles/index.scss
@@ -2,6 +2,10 @@
 
 #presentation {
   margin-top: 0.5em;
+
+  #description {
+    margin-top: 2em;
+  }
 }
 
 #blog-title {
@@ -10,4 +14,19 @@
 
 ol {
   list-style-type: none;
+}
+
+#sneaky-button {
+  a {
+    text-decoration: none;
+  }
+  position: absolute;
+  transition: 0.3s;
+}
+
+#site-content {
+  margin-top: 4em;
+  a {
+    color: black;
+  }
 }
