--- a/src/layout/Layout.scss
+++ b/src/layout/Layout.scss
@@ -804,7 +804,7 @@ pre tt::after {
 
     #profile-content {
       @media (width >= 700px) {
-        margin: 1em 2em 0 2em;
+        margin: 1em 2em 0;
       }
     }
 
