--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -43,6 +43,7 @@
       display: flex;
       align-items: center;
       padding: 0 1em;
+      margin: 0 auto;
 
       &.active {
         background-color: #8bb3cc;
