--- a/src/pages/page-styles/cv.scss
+++ b/src/pages/page-styles/cv.scss
@@ -1,5 +1,6 @@
 #job-list,
-#formation-list {
+#formation-list,
+#hobbies-list {
   margin-top: 1em;
   display: flex;
   flex-direction: column;
@@ -7,6 +8,11 @@
 }
 
 #certifications-list,
-#skills-title {
+#skills-title,
+#hobbies-title {
   margin-top: 1em;
+}
+
+.detail-block-title {
+  margin: auto;
 }
