--- a/src/pages/page-styles/index.scss
+++ b/src/pages/page-styles/index.scss
@@ -1,7 +1,7 @@
 @import '../../styles/colors';
 
-#presentation {
-  margin-top: 0.5em;
+#description {
+  margin-top: 2em;
 }
 
 #blog-title {
@@ -10,4 +10,22 @@
 
 ol {
   list-style-type: none;
+}
+
+#sneaky-button {
+  a {
+    text-decoration: none;
+  }
+
+  position: absolute;
+  transition: 0.3s;
+  z-index: 999999;
+}
+
+#site-content {
+  margin-top: 4em;
+
+  a {
+    color: black;
+  }
 }
