--- a/src/layout/Layout.scss
+++ b/src/layout/Layout.scss
@@ -33,6 +33,7 @@ body {
   -ms-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
   -webkit-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
   font-feature-settings: 'kern', 'liga', 'clig', 'calt';
+  background-color: $body-background-color;
 }
 
 article,
