--- a/src/layout/Layout.scss
+++ b/src/layout/Layout.scss
@@ -14,7 +14,7 @@ html {
     sans-serif;
   box-sizing: border-box;
   scroll-padding-top: calc($header-height-small + 0.5rem);
-  background-color: $body-background-color;
+  background-color: $header-background-color;
 
   @media (width <= 700px) {
     scroll-padding-top: calc($header-height-large + 0.5rem);
