Update body color (#1039)
* Update dependency @mui/material to v5.15.9

* Update body color

* update

* update

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

--- a/src/layout/Layout.scss
+++ b/src/layout/Layout.scss
@@ -14,6 +14,7 @@ html {
     sans-serif;
   box-sizing: border-box;
   scroll-padding-top: calc($header-height-small + 0.5rem);
+  background-color: $header-background-color;
 
   @media (width <= 700px) {
     scroll-padding-top: calc($header-height-large + 0.5rem);
