--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -44,6 +44,10 @@
       align-items: center;
       padding: 0 1em;
 
+      svg {
+        margin-right: 0.2em;
+      }
+
       &.active {
         background-color: #8bb3cc;
       }
