--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -34,15 +34,20 @@
     height: 100%;
 
     @media (width <=500px) {
-      display: grid;
-      grid-template-columns: 33% 33% 33%;
+      display: flex;
+      flex-flow: row wrap;
       margin-right: 0;
+      flex: 1 0 60%;
     }
 
     > * {
       display: flex;
       align-items: center;
       padding: 0 1em;
+
+      svg {
+        margin-right: 0.2em;
+      }
 
       &.active {
         background-color: #8bb3cc;
