Tags and category

--- a/src/components/blog/templates/TemplateBlogPost.scss
+++ b/src/components/blog/templates/TemplateBlogPost.scss
@@ -1,6 +1,41 @@
 .blog-post {
   margin-top: -1em;
 
+  .article-data {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    .article-metadata {
+      display: flex;
+      flex-direction: column;
+
+      a {
+        color: black;
+      }
+
+      .article-category {
+        justify-content: end;
+
+        a {
+          display: flex;
+          flex-direction: row;
+        }
+      }
+
+      .article-tags {
+        display: flex;
+        flex-direction: row;
+
+        .article-tag {
+          &:not(:last-child) {
+            margin-right: 0.2em;
+          }
+        }
+      }
+    }
+  }
+
   .blog-post-footer {
     display: flex;
     flex-direction: row;
