--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -4,6 +4,7 @@
   height: 100%;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 
   a {
     color: $header-text-color;
@@ -12,7 +13,6 @@
 
   #header-title {
     display: flex;
-    flex: 1 1 50%;
 
     h1 {
       margin: auto 0 auto 5em;
@@ -25,25 +25,32 @@
   }
 
   #url-list {
-    flex: 1 1 50%;
-    justify-content: right;
+    height: 100%;
     display: flex;
     flex-flow: row wrap;
-    margin: auto 10% auto 0;
+    margin: auto 5% auto 0;
     gap: 0.5em;
-    height: 100%;
+    place-content: center;
 
     @media (width <=500px) {
       display: flex;
       flex-flow: row wrap;
       margin-right: 0;
-      flex: 1 0 60%;
+      height: initial;
+    }
+
+    @media (width <=750px) {
+      height: initial;
     }
 
     > * {
       display: flex;
       align-items: center;
-      padding: 0 1em;
+      height: 100%;
+
+      @media (width <=750px) {
+        height: initial;
+      }
 
       svg {
         margin-right: 0.2em;
