--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -46,9 +46,11 @@
     > * {
       display: flex;
       align-items: center;
+      margin: 0 0.5em;
+      padding: 0 0.5em;
       height: 100%;
 
-      @media (width <=750px) {
+      @media (width <=950px) {
         height: initial;
       }
 
