--- a/src/components/profile/Profile.scss
+++ b/src/components/profile/Profile.scss
@@ -54,6 +54,7 @@
     .social-link {
       display: flex;
       flex-direction: row;
+      align-items: center;
 
       div {
         height: 35px;
