--- a/src/components/blog/templates/TemplateBlogPost.scss
+++ b/src/components/blog/templates/TemplateBlogPost.scss
@@ -1,6 +1,12 @@
 .blog-post {
   margin-top: -1em;
 
+  img {
+    margin: 1em 0;
+    max-height: 700px;
+    max-width: 700px;
+  }
+
   .blog-post-footer {
     display: flex;
     flex-direction: row;
