--- a/src/components/blog/templates/TemplateBlogPost.scss
+++ b/src/components/blog/templates/TemplateBlogPost.scss
@@ -3,8 +3,11 @@
 
   img {
     margin: 1em 0;
-    max-height: 700px;
-    max-width: 700px;
+
+    @media (width >= 950px) {
+      max-width: 700px;
+      max-width: 600px;
+    }
   }
 
   .blog-post-footer {
