--- a/src/layout/Layout.scss
+++ b/src/layout/Layout.scss
@@ -775,10 +775,6 @@ pre tt::after {
     height: $header-height-small;
     z-index: 9999;
     background-color: $header-background-color;
-
-    @media (width <= 700px) {
-      height: $header-height-large;
-    }
   }
 
   #site-container {
@@ -831,18 +827,30 @@ pre tt::after {
       #page-content {
         margin-top: 2em;
       }
-
-      @media (width <= 700px) {
-        margin: 1em 5%;
-      }
-    }
-
-    @media (width <= 700px) {
-      flex-direction: column;
     }
 
     footer {
       margin-left: 1em;
     }
+  }
+}
+
+@media (width <= 700px) {
+  #fixed-header {
+    height: $header-height-large;
+  }
+
+  #site-container {
+    flex-direction: column;
+
+    #profile-container {
+      &.blog-view {
+        display: none;
+      }
+    }
+  }
+
+  #portfolio-content {
+    margin: 1em 5%;
   }
 }
