--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -28,30 +28,37 @@
     height: 100%;
     display: flex;
     flex-flow: row wrap;
-    margin: auto 5% auto 0;
-    gap: 0.5em;
+    margin: auto 2em auto 0;
     place-content: center;
 
-    @media (width <=500px) {
-      display: flex;
-      flex-flow: row wrap;
-      margin-right: 0;
-      height: initial;
+    @media (width <=950px) {
+      display: grid;
+      gap: 0.5em;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
     }
 
-    @media (width <=750px) {
-      height: initial;
+    @media (750px <= width <= 950px) {
+      margin-left: 10em;
+    }
+
+    @media (width <=600px) {
+      margin-right: 0;
+      grid-template-columns: 1fr 1fr 2.5fr;
     }
 
     > * {
       display: flex;
       align-items: center;
-      margin: 0 0.5em;
-      padding: 0 0.5em;
+      padding: 0 1em;
       height: 100%;
 
-      @media (width <=950px) {
-        height: initial;
+      @media (width <= 650px) {
+        padding: 0;
+      }
+
+      @media (width <= 450px) {
+        margin: 0;
       }
 
       svg {
