--- a/src/components/blog/templates/TemplateBlogPost.scss
+++ b/src/components/blog/templates/TemplateBlogPost.scss
@@ -1,14 +1,25 @@
 .blog-post {
   margin-top: -1em;
 
+  img {
+    margin: 1em 0;
+
+    @media (width >= 950px) {
+      max-width: 600px;
+      max-height: 500px;
+    }
+  }
+
   .blog-post-footer {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
 
     .share-buttons {
       display: flex;
       flex-direction: row;
-      margin: 0 1em 0 auto;
+      align-items: baseline;
+      margin-right: 1em;
     }
   }
 }
