--- a/src/components/profile/Profile.scss
+++ b/src/components/profile/Profile.scss
@@ -31,6 +31,7 @@
     display: flex;
     flex-direction: column;
     gap: 1em 0.5em;
+    font-size: 0.9rem;
 
     .social-link {
       display: flex;
