--- a/src/components/blog/templates/TemplateBlogPost.scss
+++ b/src/components/blog/templates/TemplateBlogPost.scss
@@ -18,6 +18,7 @@
     .share-article-container {
       display: flex;
       flex-direction: row;
+      flex: 0 1 50%;
       align-items: baseline;
       margin-right: 1em;
     }
