--- a/src/layout/Layout.scss
+++ b/src/layout/Layout.scss
@@ -806,6 +806,12 @@ pre tt::after {
             border-radius: 5px;
           }
         }
+
+        #page-content {
+          #page-description {
+            margin: 1em 0 3em 0;
+          }
+        }
       }
     }
 
