--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -26,10 +26,12 @@
     flex-flow: row wrap;
     margin: auto 2em auto 0;
     place-content: center;
+    column-gap: 0.4em;
 
     @media (width <= 950px) {
       display: grid;
-      gap: 0.5em;
+      row-gap: 0.2em;
+      column-gap: 0.5em;
       grid-template-columns: 1fr 1fr 1fr;
       grid-template-rows: 1fr 1fr;
     }
@@ -48,7 +50,7 @@
       align-items: center;
       padding: 0 1em;
       height: 100%;
-      border-radius: 5%;
+      border-radius: 4%;
 
       @media (width <= 650px) {
         padding: 0;
