--- a/src/layout/Layout.scss
+++ b/src/layout/Layout.scss
@@ -778,7 +778,7 @@ pre tt::after {
 
       @media (width >= 700px) {
         > * {
-          margin: 1em 2em 0;
+          margin: 1.5em 2em 0;
         }
       }
     }
@@ -834,6 +834,16 @@ pre tt::after {
       #portfolio-body {
         #portfolio-content {
           margin: 2em 5%;
+
+          #page-header {
+            margin-top: 0;
+          }
+
+          #page-content {
+            #page-description {
+              margin: 0.5em 0 1.5em 0;
+            }
+          }
         }
       }
 
