--- a/src/layout/Layout.scss
+++ b/src/layout/Layout.scss
@@ -810,7 +810,7 @@ pre tt::after {
 
         #page-content {
           #page-description {
-            margin: 1em 0 3em 0;
+            margin: 1em 0 3em;
           }
         }
       }
@@ -841,7 +841,7 @@ pre tt::after {
 
           #page-content {
             #page-description {
-              margin: 0.5em 0 1.5em 0;
+              margin: 0.5em 0 1.5em;
             }
           }
         }
