--- a/src/components/blog/templates/TemplateBlogPost.scss
+++ b/src/components/blog/templates/TemplateBlogPost.scss
@@ -1,13 +1,6 @@
 .blog-post {
-  margin-top: -1em;
-
   img {
     margin: 1em 0;
-
-    @media (width >= 950px) {
-      max-width: 600px;
-      max-height: 500px;
-    }
   }
 
   .blog-post-footer {
@@ -15,11 +8,18 @@
     flex-direction: row;
     justify-content: space-between;
 
-    .share-buttons {
+    .share-article-container {
       display: flex;
       flex-direction: row;
+      align-content: center;
+      flex: 0 1 60%;
       align-items: baseline;
       margin-right: 1em;
+
+      svg {
+        height: 37px;
+        width: 37px;
+      }
     }
   }
 }
@@ -31,5 +31,22 @@
     justify-content: space-between;
     list-style: none;
     padding: 0;
+  }
+}
+
+@media (width >= 950px) {
+  img {
+    max-width: 600px;
+    max-height: 500px;
+  }
+}
+
+@media (width<= 600px) {
+  .blog-post {
+    .blog-post-footer {
+      .share-article-container {
+        flex-direction: column;
+      }
+    }
   }
 }
