--- a/src/components/cv/experience/Experience.scss
+++ b/src/components/cv/experience/Experience.scss
@@ -4,12 +4,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 0 auto;
+  place-items: center;
   height: 100%;
+  width: 100%;
 
   .job-name {
-    margin: auto;
-
     img {
       max-height: 100px;
       max-width: 130px;
@@ -22,8 +21,6 @@
 }
 
 .job-details-content {
-  margin: 0.5em;
-
   .job-description {
     white-space: pre-line;
   }
