--- a/src/components/detailBlock/DetailBlock.scss
+++ b/src/components/detailBlock/DetailBlock.scss
@@ -4,15 +4,7 @@
   display: flex;
   flex-direction: row;
   border: 2px solid $detail-block-border-color;
-
-  .detail-info {
-    flex-basis: 75%;
-    background-color: #a8c9d4;
-
-    > * {
-      margin: 0 0.2rem;
-    }
-  }
+  background-color: #a8c9d4;
 
   .block-title {
     flex-basis: 25%;
@@ -22,14 +14,19 @@
 
     .block-title-content {
       display: flex;
-      margin: 0.5em;
+      margin: 10px;
       text-align: center;
       width: 100%;
 
       > * {
-        width: 100%;
+        margin: auto;
       }
     }
+  }
+
+  .detail-info {
+    flex-basis: 75%;
+    margin: 10px;
   }
 }
 
