--- a/src/components/projects/repositories/RepositoryWidget.scss
+++ b/src/components/projects/repositories/RepositoryWidget.scss
@@ -9,11 +9,12 @@
     display: flex;
     flex-direction: column;
     row-gap: 0.5em;
-    margin-top: 1em;
+    margin: 0.5em 0;
 
     .repository-icons {
       display: flex;
       flex-flow: row wrap;
+      gap: 0.2em 0.5em;
     }
   }
 
