--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -14,6 +14,7 @@
   h1 {
     margin: auto 0 auto 5em;
     font-size: x-large;
+    flex: 1 1 30%;
 
     @media (width <=550px) {
       margin-left: 1em;
@@ -26,7 +27,7 @@
     flex-flow: row wrap;
     margin: auto 2em auto 0;
     place-content: center;
-    column-gap: 0.4em;
+    flex: 1 1 50%;
 
     @media (width <= 950px) {
       display: grid;
@@ -46,13 +47,15 @@
 
     > * {
       display: flex;
+      flex: 1;
       align-items: center;
+      justify-content: center;
       padding: 0 0.5em;
       height: 100%;
       border-radius: 4%;
 
       svg {
-        margin-right: 0.2em;
+        margin-right: 0.5em;
       }
 
       &.active {
