--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -31,7 +31,7 @@
 
     @media (width <= 950px) {
       display: grid;
-      gap: 0.2em 0.5em;
+      row-gap: 0.2em;
       grid-template-columns: 1fr 1fr 1fr;
       grid-template-rows: 1fr 1fr;
     }
@@ -47,12 +47,15 @@
 
     > * {
       display: flex;
-      flex: 1;
       align-items: center;
-      justify-content: center;
       padding: 0 0.5em;
       height: 100%;
       border-radius: 4%;
+
+      @media (width >= 950px) {
+        flex: 1;
+        justify-content: center;
+      }
 
       svg {
         margin-right: 0.5em;
